--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,17 +30,17 @@ jobs:
     - name: Build (Windows)
       if: ${{ runner.os == 'windows' }}
       run: |
-        pyinstaller -wF main.py --icon='image/icon.ico' --add-data 'style/style_light.qss;style' --add-data 'style/table.qss;style' --add-data 'font/Study-Bold.otf;font' --add-data 'image/icon.png;image' --name='SubtitleRenamer'
+        pyinstaller -wF main.py --icon=image/icon.png --add-data src/style/style_light.qss;src/style --add-data src/style/setting_light.qss;src/style --add-data src/style/table.qss;src/style --add-data src/font/Study-Bold.otf;src/font --add-data image/icon.png;image --name=SubtitleRenamer
 
     - name: Build (macOS)
       if: ${{ runner.os == 'macos' }}
       run: |
-        pyinstaller -wF main.py -i image/icon.icns --add-data style:style --add-data font:font --name=SubtitleRenamer
+        pyinstaller -wF main.py -i image/icon.icns --add-data src/style:src/style --add-data src/font:src/font --name=SubtitleRenamer
 
     - name: Build (Linux)
       if: ${{ runner.os == 'linux' }}
       run: |
-        pyinstaller -wF main.py --add-data style:style --name=SubtitleRenamer
+        pyinstaller -wF main.py --add-data src/style:src/style --add-data src/font:src/font --name=SubtitleRenamer
 
     - name: Upload (Windows)
       if: ${{ runner.os == 'windows' }}
