--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-PySide6==6.4.3
+PySide6~=6.4.2
 PySide6-Fluent-Widgets
 chardet~=5.1.0
 ass~=0.5.3
 hanzidentifier~=1.1.0
 Send2Trash~=1.8.2
 joblib~=1.2.0
+requests
