chore: 合并开发版本

--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "fmt": "cargo fmt --manifest-path src/Cargo.toml && cargo clippy --fix --allow-dirty --allow-staged --manifest-path src/Cargo.toml"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@phosphor-icons/react": "^2.1.10",
     "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
+    "@tauri-apps/plugin-os": "^2.3.2",
+    "@tauri-apps/plugin-shell": "^2.3.3",
+    "@tauri-apps/plugin-store": "^2.4.1",
+    "chardet": "^2.1.1",
     "clsx": "^2.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
