--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -11,7 +11,20 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["macos-private-api"] }
 tauri-plugin-opener = "2"
+tauri-plugin-os = "2"
+tauri-plugin-store = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
+trash = "5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+window-vibrancy = "0.7"
+zip = "6"
+sevenz-rust = "0.6"
+unrar = "0.5"
+walkdir = "2"
+encoding_rs = "0.8"
+anyhow = "1"
