ci: 支持编译windows arm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,13 @@ jobs:
             artifact: subtitle-renamer_${{ github.ref_name }}_windows_x64.zip
             exeName: Subtitle Renamer.exe
 
+          - name: Windows (ARM64)
+            os: windows-latest
+            target: aarch64-pc-windows-msvc
+            args: --no-bundle
+            artifact: subtitle-renamer_${{ github.ref_name }}_windows_arm64.zip
+            exeName: Subtitle Renamer.exe
+
     name: Build (${{ matrix.name }})
     runs-on: ${{ matrix.os }}
 
