--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/plugin-store": "^2.4.2",
     "chardet": "^2.1.1",
     "clsx": "^2.1.1",
+    "diff": "^8.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
