--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -18,6 +18,7 @@ tauri-plugin-store = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-clipboard-manager = "2"
 tauri-plugin-window-state = "2"
 trash = "5"
 serde = { version = "1", features = ["derive"] }
